test/invalid/baseline/spaced-variadic.txt
Syntax error at line 2 in spaced-variadic.widl, since `interface X`:
    void operation(object . . . args
                   ^ Unterminated operation
